...
        alignItems: 'center',
        height: width * 0.30,
        width: width * 0.30,
        borderRadius: width * 0.30,
        backgroundColor: 'rgba(63, 37, 229, 0.15)',
    },
    playButton: {
        justifyContent: 'center',
        alignItems: 'center',
        height: width * 0.28,
        width: width * 0.28,
        borderRadius: width * 0.28,
        backgroundColor: '#3F25E5',
...
